fix overflowset bug

--- a/Tesserae/bridge/assets/css/tesserae.dropdown.css
+++ b/Tesserae/bridge/assets/css/tesserae.dropdown.css
@@ -9,7 +9,7 @@
     color: var(--tss-default-foreground-color);
     cursor: pointer;
     height: 32px;
-    align-items: stretch;
+    align-items: center;
     font-size: var(--tss-font-size-small);
     font-weight: var(--tss-font-weight-regular);
     width: 100%;
